--- a/release.json
+++ b/release.json
@@ -4,5 +4,5 @@
   "description": "Baldurs Gate 3 Modpack",
   "repository": "https://github.com/rbutera/baldinggate",
   "releaseName": "BaldingGate",
-  "notes": "Generic release notes for version 1.0.6"
+  "notes": "Updated to 1.1.0"
 }
