--- a/GameData/bin/ReShade.ini
+++ b/GameData/bin/ReShade.ini
@@ -9,7 +9,7 @@ NoEffectCache=0
 NoReloadOnInit=0
 PerformanceMode=0
 PreprocessorDefinitions=RESHADE_DEPTH_LINEARIZATION_FAR_PLANE=1000.0,RESHADE_DEPTH_INPUT_IS_UPSIDE_DOWN=0,RESHADE_DEPTH_INPUT_IS_REVERSED=1,RESHADE_DEPTH_INPUT_IS_LOGARITHMIC=0
-PresetPath=X:\dl\Pure-11233-1-0-2-1723046937\Pure_1.0.2.ini
+PresetPath=X:\Apps\BG3ModManager\Pure_1.0.2.ini
 PresetShortcutKeys=
 PresetShortcutPaths=
 PresetTransitionDuration=1000
@@ -32,7 +32,7 @@ KeyReload=0,0,0,0
 KeyScreenshot=44,0,0,0
 
 [OVERLAY]
-AutoSavePreset=1
+AutoSavePreset=0
 ClockFormat=0
 Docking=[Docking][Data],DockSpace   ID=0x3D9908E7 Window=0x995B0CF8 Pos=8,,8 Size=2544,,1424 Split=X,  DockNode  ID=0x00000001 Parent=0x3D9908E7 SizeRef=895,,1385 Selected=0x5825E570,  DockNode  ID=0x00000002 Parent=0x3D9908E7 SizeRef=1663,,1385 CentralNode=1
 FPSPosition=1
@@ -85,5 +85,4 @@ ScrollbarRounding=0.000000
 StyleIndex=2
 TabRounding=4.000000
 WindowRounding=0.000000
-
 
